--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hey there
+<html>
+<head>
+  <title>Twitocode</title>
+  <style>
+    #header {
+      font-size: 5rem;
+    }
+  </style>
+</head>
+  <body>
+    <h1 id="header">Twitocode</h1>
+    <h1>Obsidian Notes: </h1>
+    <a href="/Tantalum">Tantalum</a>
+  </body>
+</html>
